load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sink",
    srcs = [
        "black_hole.go",
        "sink.go",
        "table_sink.go",
        "validator.go",
    ],
    importpath = "github.com/pingcap/tidb/cdc/sink",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_log//:log",
        "@com_github_pingcap_tiflow//cdc/contextutil:go_default_library",
        "@com_github_pingcap_tiflow//cdc/model:go_default_library",
        "@com_github_pingcap_tiflow//cdc/sink/metrics:go_default_library",
        "@com_github_pingcap_tiflow//cdc/sink/mq:go_default_library",
        "@com_github_pingcap_tiflow//cdc/sink/mysql:go_default_library",
        "@com_github_pingcap_tiflow//pkg/config:go_default_library",
        "@com_github_pingcap_tiflow//pkg/errors:go_default_library",
        "@com_github_pingcap_tiflow//pkg/util:go_default_library",
        "@com_github_prometheus_client_golang//prometheus",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "sink_test",
    srcs = [
        "black_hole_test.go",
        "main_test.go",
        "sink_test.go",
        "validator_test.go",
    ],
    embed = [":sink"],
    deps = [
        "@com_github_pingcap_tiflow//cdc/model:go_default_library",
        "@com_github_pingcap_tiflow//pkg/config:go_default_library",
        "@com_github_pingcap_tiflow//pkg/leakutil:go_default_library",
        "@com_github_stretchr_testify//require",
    ],
)
