load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "sorter",
    srcs = [
        "metrics.go",
        "sorter.go",
    ],
    importpath = "github.com/pingcap/tidb/cdc/sorter",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pingcap_tiflow//cdc/model:go_default_library",
        "@com_github_prometheus_client_golang//prometheus",
    ],
)
