load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "verification",
    srcs = [
        "checker.go",
        "mock_checkSumChecker.go",
    ],
    importpath = "github.com/pingcap/tidb/cdc/verification",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pingcap_log//:log",
        "@com_github_pingcap_tiflow//pkg/errors:go_default_library",
        "@com_github_pingcap_tiflow//pkg/filter:go_default_library",
        "@com_github_stretchr_testify//mock",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "verification_test",
    srcs = ["checker_test.go"],
    embed = [":verification"],
    deps = [
        "@com_github_data_dog_go_sqlmock//:go-sqlmock",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_tiflow//pkg/config:go_default_library",
        "@com_github_pingcap_tiflow//pkg/filter:go_default_library",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
    ],
)
