load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "checker",
    srcs = [
        "checker.go",
        "cmd.go",
    ],
    importpath = "github.com/pingcap/tidb/dm/checker",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_pingcap_tidb//dumpling/export",
        "@com_github_pingcap_tidb//util/dbutil",
        "@com_github_pingcap_tidb//util/filter",
        "@com_github_pingcap_tidb//util/regexpr-router",
        "@com_github_pingcap_tidb_parser//mysql",
        "@com_github_pingcap_tiflow//dm/dm/config:go_default_library",
        "@com_github_pingcap_tiflow//dm/dm/pb:go_default_library",
        "@com_github_pingcap_tiflow//dm/dm/unit:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/binlog:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/checker:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/conn:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/context:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/cputil:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/dumpling:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/func-rollback:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/log:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/terror:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/utils:go_default_library",
        "@com_github_pingcap_tiflow//dm/syncer/online-ddl-tools:go_default_library",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_atomic//:atomic",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "checker_test",
    srcs = ["check_test.go"],
    embed = [":checker"],
    deps = [
        "@com_github_data_dog_go_sqlmock//:go-sqlmock",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_pingcap_check//:check",
        "@com_github_pingcap_tidb//util/table-router",
        "@com_github_pingcap_tidb_parser//mysql",
        "@com_github_pingcap_tiflow//dm/dm/config:go_default_library",
        "@com_github_pingcap_tiflow//dm/dm/ctl/common:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/conn:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/cputil:go_default_library",
    ],
)
