load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "loader",
    srcs = [
        "checkpoint.go",
        "convert_data.go",
        "db.go",
        "lightning.go",
        "loader.go",
        "metrics.go",
        "status.go",
        "util.go",
    ],
    importpath = "github.com/pingcap/tidb/dm/loader",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_tidb//br/pkg/lightning",
        "@com_github_pingcap_tidb//br/pkg/lightning/checkpoints",
        "@com_github_pingcap_tidb//br/pkg/lightning/config",
        "@com_github_pingcap_tidb//util/dbutil",
        "@com_github_pingcap_tidb//util/filter",
        "@com_github_pingcap_tidb//util/promutil",
        "@com_github_pingcap_tidb//util/regexpr-router",
        "@com_github_pingcap_tidb//util/table-router",
        "@com_github_pingcap_tidb_parser//ast",
        "@com_github_pingcap_tidb_parser//mysql",
        "@com_github_pingcap_tidb_tools//pkg/column-mapping",
        "@com_github_pingcap_tiflow//dm/dm/config:go_default_library",
        "@com_github_pingcap_tiflow//dm/dm/pb:go_default_library",
        "@com_github_pingcap_tiflow//dm/dm/unit:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/binlog:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/conn:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/context:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/cputil:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/dumpling:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/func-rollback:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/ha:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/log:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/metricsproxy:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/parser:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/retry:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/storage:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/terror:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/utils:go_default_library",
        "@com_github_pingcap_tiflow//engine/pkg/promutil:go_default_library",
        "@com_github_prometheus_client_golang//prometheus",
        "@io_etcd_go_etcd_client_v3//:client",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_atomic//:atomic",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "loader_test",
    srcs = [
        "checkpoint_test.go",
        "convert_data_test.go",
        "loader_test.go",
        "status_test.go",
        "util_test.go",
    ],
    embed = [":loader"],
    deps = [
        "@com_github_data_dog_go_sqlmock//:go-sqlmock",
        "@com_github_pingcap_check//:check",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_tidb//util/regexpr-router",
        "@com_github_pingcap_tidb//util/table-router",
        "@com_github_pingcap_tidb_tools//pkg/column-mapping",
        "@com_github_pingcap_tiflow//dm/dm/config:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/conn:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/context:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/cputil:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/log:go_default_library",
        "@org_uber_go_atomic//:atomic",
    ],
)
