load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "relay",
    srcs = [
        "binlog_writer.go",
        "config.go",
        "file.go",
        "file_util.go",
        "local_reader.go",
        "meta.go",
        "metrics.go",
        "purge_strategy.go",
        "purger.go",
        "purger_helper.go",
        "relay.go",
        "relay_writer.go",
        "remote_retry.go",
        "streamer.go",
        "upstream_reader.go",
        "util.go",
    ],
    importpath = "github.com/pingcap/tidb/dm/relay",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_burntsushi_toml//:toml",
        "@com_github_go_mysql_org_go_mysql//mysql",
        "@com_github_go_mysql_org_go_mysql//replication",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_tidb//util",
        "@com_github_pingcap_tidb_parser//:parser",
        "@com_github_pingcap_tiflow//dm/dm/config:go_default_library",
        "@com_github_pingcap_tiflow//dm/dm/pb:go_default_library",
        "@com_github_pingcap_tiflow//dm/dm/unit:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/backoff:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/binlog:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/binlog/common:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/binlog/event:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/binlog/reader:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/conn:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/context:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/gtid:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/log:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/metricsproxy:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/parser:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/retry:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/streamer:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/terror:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/utils:go_default_library",
        "@com_github_pingcap_tiflow//engine/pkg/promutil:go_default_library",
        "@com_github_prometheus_client_golang//prometheus",
        "@org_uber_go_atomic//:atomic",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "relay_test",
    srcs = [
        "binlog_writer_test.go",
        "file_test.go",
        "file_util_test.go",
        "local_reader_test.go",
        "meta_test.go",
        "purger_helper_test.go",
        "purger_test.go",
        "relay_test.go",
        "relay_writer_test.go",
        "remote_retry_test.go",
        "streamer_test.go",
        "upstream_reader_test.go",
        "util_test.go",
    ],
    embed = [":relay"],
    deps = [
        "@com_github_burntsushi_toml//:toml",
        "@com_github_data_dog_go_sqlmock//:go-sqlmock",
        "@com_github_go_mysql_org_go_mysql//mysql",
        "@com_github_go_mysql_org_go_mysql//replication",
        "@com_github_google_uuid//:uuid",
        "@com_github_pingcap_check//:check",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_tidb_parser//:parser",
        "@com_github_pingcap_tiflow//dm/dm/config:go_default_library",
        "@com_github_pingcap_tiflow//dm/dm/pb:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/binlog/event:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/binlog/reader:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/conn:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/gtid:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/log:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/streamer:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/terror:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/utils:go_default_library",
    ],
)
