load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "syncer",
    srcs = [
        "binlog_locations.go",
        "causality.go",
        "checkpoint.go",
        "checkpoint_flush_worker.go",
        "compactor.go",
        "data_validator.go",
        "ddl.go",
        "dml.go",
        "dml_worker.go",
        "error.go",
        "expr_filter_group.go",
        "filter.go",
        "handle_error.go",
        "job.go",
        "opt_sharding_group.go",
        "optimist.go",
        "relay.go",
        "safe_mode.go",
        "schema.go",
        "sharding_group.go",
        "status.go",
        "syncer.go",
        "test_injector.go",
        "util.go",
        "validate_worker.go",
        "validator_checkpoint.go",
        "validator_cond.go",
    ],
    importpath = "github.com/pingcap/tidb/dm/syncer",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_docker_go_units//:go-units",
        "@com_github_go_mysql_org_go_mysql//mysql",
        "@com_github_go_mysql_org_go_mysql//replication",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_tidb//br/pkg/version",
        "@com_github_pingcap_tidb//ddl",
        "@com_github_pingcap_tidb//dumpling/export",
        "@com_github_pingcap_tidb//dumpling/log",
        "@com_github_pingcap_tidb//errno",
        "@com_github_pingcap_tidb//executor",
        "@com_github_pingcap_tidb//expression",
        "@com_github_pingcap_tidb//infoschema",
        "@com_github_pingcap_tidb//meta/autoid",
        "@com_github_pingcap_tidb//planner/core",
        "@com_github_pingcap_tidb//sessionctx",
        "@com_github_pingcap_tidb//util",
        "@com_github_pingcap_tidb//util/chunk",
        "@com_github_pingcap_tidb//util/dbterror",
        "@com_github_pingcap_tidb//util/dbutil",
        "@com_github_pingcap_tidb//util/filter",
        "@com_github_pingcap_tidb//util/regexpr-router",
        "@com_github_pingcap_tidb//util/table-router",
        "@com_github_pingcap_tidb_parser//:parser",
        "@com_github_pingcap_tidb_parser//ast",
        "@com_github_pingcap_tidb_parser//charset",
        "@com_github_pingcap_tidb_parser//format",
        "@com_github_pingcap_tidb_parser//model",
        "@com_github_pingcap_tidb_parser//mysql",
        "@com_github_pingcap_tidb_parser//types",
        "@com_github_pingcap_tidb_tools//pkg/binlog-filter",
        "@com_github_pingcap_tidb_tools//pkg/column-mapping",
        "@com_github_pingcap_tiflow//cdc/model:go_default_library",
        "@com_github_pingcap_tiflow//dm/dm/config:go_default_library",
        "@com_github_pingcap_tiflow//dm/dm/pb:go_default_library",
        "@com_github_pingcap_tiflow//dm/dm/unit:go_default_library",
        "@com_github_pingcap_tiflow//dm/openapi:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/binlog:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/binlog/common:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/binlog/event:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/binlog/reader:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/conn:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/context:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/cputil:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/dumpling:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/func-rollback:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/gtid:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/ha:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/log:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/parser:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/retry:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/schema:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/shardddl/optimism:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/shardddl/pessimism:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/storage:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/streamer:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/terror:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/utils:go_default_library",
        "@com_github_pingcap_tiflow//dm/relay:go_default_library",
        "@com_github_pingcap_tiflow//dm/syncer/binlogstream:go_default_library",
        "@com_github_pingcap_tiflow//dm/syncer/dbconn:go_default_library",
        "@com_github_pingcap_tiflow//dm/syncer/metrics:go_default_library",
        "@com_github_pingcap_tiflow//dm/syncer/online-ddl-tools:go_default_library",
        "@com_github_pingcap_tiflow//dm/syncer/safe-mode:go_default_library",
        "@com_github_pingcap_tiflow//dm/syncer/shardddl:go_default_library",
        "@com_github_pingcap_tiflow//dm/syncer/sharding-meta:go_default_library",
        "@com_github_pingcap_tiflow//pkg/errorutil:go_default_library",
        "@com_github_pingcap_tiflow//pkg/quotes:go_default_library",
        "@com_github_pingcap_tiflow//pkg/sqlmodel:go_default_library",
        "@com_github_shopspring_decimal//:decimal",
        "@com_github_uber_go_atomic//:atomic",
        "@io_etcd_go_etcd_client_v3//:client",
        "@org_uber_go_atomic//:atomic",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "syncer_test",
    srcs = [
        "binlog_locations_test.go",
        "causality_test.go",
        "checkpoint_test.go",
        "compactor_test.go",
        "data_validator_test.go",
        "ddl_test.go",
        "dml_test.go",
        "dml_worker_test.go",
        "error_test.go",
        "expr_filter_group_test.go",
        "filter_test.go",
        "handle_error_test.go",
        "job_test.go",
        "opt_sharding_group_test.go",
        "safe_mode_test.go",
        "sharding_group_test.go",
        "status_test.go",
        "syncer_test.go",
        "util_test.go",
        "validate_worker_test.go",
        "validator_checkpoint_test.go",
        "validator_cond_test.go",
    ],
    embed = [":syncer"],
    deps = [
        "@com_github_data_dog_go_sqlmock//:go-sqlmock",
        "@com_github_go_mysql_org_go_mysql//mysql",
        "@com_github_go_mysql_org_go_mysql//replication",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_pingcap_check//:check",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_failpoint//:failpoint",
        "@com_github_pingcap_log//:log",
        "@com_github_pingcap_tidb//ddl",
        "@com_github_pingcap_tidb//errno",
        "@com_github_pingcap_tidb//infoschema",
        "@com_github_pingcap_tidb//sessionctx",
        "@com_github_pingcap_tidb//types/parser_driver",
        "@com_github_pingcap_tidb//util/dbutil",
        "@com_github_pingcap_tidb//util/filter",
        "@com_github_pingcap_tidb//util/mock",
        "@com_github_pingcap_tidb//util/regexpr-router",
        "@com_github_pingcap_tidb//util/table-router",
        "@com_github_pingcap_tidb_parser//:parser",
        "@com_github_pingcap_tidb_parser//ast",
        "@com_github_pingcap_tidb_parser//model",
        "@com_github_pingcap_tidb_parser//mysql",
        "@com_github_pingcap_tidb_parser//types",
        "@com_github_pingcap_tidb_tools//pkg/binlog-filter",
        "@com_github_pingcap_tidb_tools//pkg/column-mapping",
        "@com_github_pingcap_tiflow//cdc/model:go_default_library",
        "@com_github_pingcap_tiflow//dm/dm/config:go_default_library",
        "@com_github_pingcap_tiflow//dm/dm/pb:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/binlog:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/binlog/event:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/binlog/reader:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/conn:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/context:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/cputil:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/gtid:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/log:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/parser:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/retry:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/schema:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/terror:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/utils:go_default_library",
        "@com_github_pingcap_tiflow//dm/syncer/binlogstream:go_default_library",
        "@com_github_pingcap_tiflow//dm/syncer/dbconn:go_default_library",
        "@com_github_pingcap_tiflow//dm/syncer/metrics:go_default_library",
        "@com_github_pingcap_tiflow//dm/syncer/online-ddl-tools:go_default_library",
        "@com_github_pingcap_tiflow//dm/syncer/safe-mode:go_default_library",
        "@com_github_pingcap_tiflow//dm/syncer/shardddl:go_default_library",
        "@com_github_pingcap_tiflow//pkg/errorutil:go_default_library",
        "@com_github_pingcap_tiflow//pkg/sqlmodel:go_default_library",
        "@com_github_stretchr_testify//require",
        "@com_github_stretchr_testify//suite",
        "@io_etcd_go_etcd_tests_v3//integration",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
