load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "swagger",
    srcs = [
        "docs.go",
        "placeholder.go",
    ],
    importpath = "github.com/pingcap/tidb/docs/swagger",
    visibility = ["//visibility:public"],
    deps = ["@com_github_swaggo_swag//:swag"],
)
