load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "client",
    srcs = [
        "base_executor_client.go",
        "client_manager.go",
        "executor_client.go",
        "master_client.go",
        "mock_clients.go",
        "task_dispatcher.go",
    ],
    importpath = "github.com/pingcap/tidb/engine/client",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gogo_status//:status",
        "@com_github_google_uuid//:uuid",
        "@com_github_grpc_ecosystem_go_grpc_middleware//logging/zap",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_log//:log",
        "@com_github_pingcap_tiflow//engine/enginepb:go_default_library",
        "@com_github_pingcap_tiflow//engine/model:go_default_library",
        "@com_github_pingcap_tiflow//engine/pkg/rpcutil:go_default_library",
        "@com_github_pingcap_tiflow//engine/pkg/tenant:go_default_library",
        "@com_github_pingcap_tiflow//engine/test:go_default_library",
        "@com_github_pingcap_tiflow//engine/test/mock:go_default_library",
        "@com_github_pingcap_tiflow//pkg/errors:go_default_library",
        "@com_github_pingcap_tiflow//pkg/retry:go_default_library",
        "@com_github_stretchr_testify//mock",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//backoff",
        "@org_golang_google_grpc//codes",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "client_test",
    srcs = [
        "client_test.go",
        "master_client_test.go",
        "task_dispatcher_test.go",
    ],
    embed = [":client"],
    deps = [
        "@com_github_gogo_status//:status",
        "@com_github_pingcap_tiflow//engine/client:go_default_library",
        "@com_github_pingcap_tiflow//engine/enginepb:go_default_library",
        "@com_github_pingcap_tiflow//engine/executor:go_default_library",
        "@com_github_pingcap_tiflow//engine/pkg/etcdutil:go_default_library",
        "@com_github_pingcap_tiflow//engine/servermaster:go_default_library",
        "@com_github_pingcap_tiflow//engine/test:go_default_library",
        "@com_github_pingcap_tiflow//engine/test/mock:go_default_library",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_uber_go_atomic//:atomic",
    ],
)
