load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ctl",
    srcs = [
        "cmd.go",
        "ctl.go",
    ],
    importpath = "github.com/pingcap/tidb/engine/ctl",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_burntsushi_toml//:toml",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_tiflow//dm/pkg/log:go_default_library",
        "@com_github_pingcap_tiflow//dm/pkg/utils:go_default_library",
        "@com_github_pingcap_tiflow//engine/client:go_default_library",
        "@com_github_pingcap_tiflow//engine/enginepb:go_default_library",
        "@com_github_pingcap_tiflow//engine/framework/model:go_default_library",
        "@com_github_pingcap_tiflow//engine/model:go_default_library",
        "@com_github_pingcap_tiflow//engine/pkg/errors:go_default_library",
        "@com_github_pingcap_tiflow//engine/pkg/tenant:go_default_library",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_pflag//:pflag",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
