load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "executor",
    srcs = [
        "config.go",
        "init.go",
        "metrics_server.go",
        "openapi.go",
        "server.go",
    ],
    importpath = "github.com/pingcap/tidb/engine/executor",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_burntsushi_toml//:toml",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_log//:log",
        "@com_github_pingcap_tiflow//dm/dm/common:go_default_library",
        "@com_github_pingcap_tiflow//engine/client:go_default_library",
        "@com_github_pingcap_tiflow//engine/enginepb:go_default_library",
        "@com_github_pingcap_tiflow//engine/executor/cvs:go_default_library",
        "@com_github_pingcap_tiflow//engine/executor/dm:go_default_library",
        "@com_github_pingcap_tiflow//engine/executor/server:go_default_library",
        "@com_github_pingcap_tiflow//engine/executor/worker:go_default_library",
        "@com_github_pingcap_tiflow//engine/framework:go_default_library",
        "@com_github_pingcap_tiflow//engine/framework/logutil:go_default_library",
        "@com_github_pingcap_tiflow//engine/framework/model:go_default_library",
        "@com_github_pingcap_tiflow//engine/framework/registry:go_default_library",
        "@com_github_pingcap_tiflow//engine/framework/taskutil:go_default_library",
        "@com_github_pingcap_tiflow//engine/jobmaster/cvsjob:go_default_library",
        "@com_github_pingcap_tiflow//engine/jobmaster/dm:go_default_library",
        "@com_github_pingcap_tiflow//engine/model:go_default_library",
        "@com_github_pingcap_tiflow//engine/pkg/context:go_default_library",
        "@com_github_pingcap_tiflow//engine/pkg/deps:go_default_library",
        "@com_github_pingcap_tiflow//engine/pkg/externalresource/broker:go_default_library",
        "@com_github_pingcap_tiflow//engine/pkg/externalresource/storagecfg:go_default_library",
        "@com_github_pingcap_tiflow//engine/pkg/meta/model:go_default_library",
        "@com_github_pingcap_tiflow//engine/pkg/orm:go_default_library",
        "@com_github_pingcap_tiflow//engine/pkg/p2p:go_default_library",
        "@com_github_pingcap_tiflow//engine/pkg/promutil:go_default_library",
        "@com_github_pingcap_tiflow//engine/pkg/rpcutil:go_default_library",
        "@com_github_pingcap_tiflow//engine/pkg/serverutil:go_default_library",
        "@com_github_pingcap_tiflow//engine/pkg/tenant:go_default_library",
        "@com_github_pingcap_tiflow//engine/test:go_default_library",
        "@com_github_pingcap_tiflow//engine/test/mock:go_default_library",
        "@com_github_pingcap_tiflow//pkg/errors:go_default_library",
        "@com_github_pingcap_tiflow//pkg/logutil:go_default_library",
        "@com_github_pingcap_tiflow//pkg/p2p:go_default_library",
        "@com_github_pingcap_tiflow//pkg/retry:go_default_library",
        "@com_github_pingcap_tiflow//pkg/security:go_default_library",
        "@com_github_pingcap_tiflow//pkg/tcpserver:go_default_library",
        "@com_github_prometheus_client_golang//prometheus",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_x_sync//errgroup",
        "@org_golang_x_time//rate",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "executor_test",
    srcs = [
        "config_test.go",
        "openapi_test.go",
        "server_test.go",
    ],
    embed = [":executor"],
    deps = [
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_phayes_freeport//:freeport",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_tiflow//engine/client:go_default_library",
        "@com_github_pingcap_tiflow//engine/enginepb:go_default_library",
        "@com_github_pingcap_tiflow//engine/executor/server:go_default_library",
        "@com_github_pingcap_tiflow//engine/executor/worker:go_default_library",
        "@com_github_pingcap_tiflow//engine/model:go_default_library",
        "@com_github_pingcap_tiflow//pkg/logutil:go_default_library",
        "@com_github_pingcap_tiflow//pkg/uuid:go_default_library",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_x_sync//errgroup",
    ],
)
